JL-7 исправлены ошибки в названии функций

--- a/JL-7.html
+++ b/JL-7.html
@@ -1,26 +1,26 @@
 <script>
     //1
-    function getTimeSec() {
+    function getSeconds() {
         let s = new Date();
         return s.getSeconds();
     }
-    console.log(getTimeSec());
+    console.log(getSeconds());
 
     //2
 
-    function getTimeS() {
+    function getSecondsMultiply() {
         let s = new Date();
         return s.getSeconds() * 5;
     }
-    console.log(getTimeS());
+    console.log(getSecondsMultiply());
 
     //3
 
-    function getTimeSM() {
+    function getSecondsMultiplyMinutes() {
         let date = new Date();
         return date.getSeconds() * date.getMinutes();
     }
-    console.log(getTimeSM());
+    console.log(getSecondsMultiplyMinute());
 
 
 
