--- a/JL-8.html
+++ b/JL-8.html
@@ -7,25 +7,18 @@
         switch (date.getDay()) {
             case 0:
                 return 'Воскресенье';
-                break;
             case 1:
                 return 'Понедельник';
-                break;
             case 2:
                 return 'Вторник';
-                break;
             case 3:
                 return 'Среда';
-                break;
             case 4:
                 return 'Четверг';
-                break;
             case 5:
                 return 'Пятница';
-                break;
             case 6:
                 return 'Cуббота';
-                break;
         }
     }
     document.write(getWeekDay() + '<br>');
@@ -45,7 +38,7 @@
                 document.write('Вторник');
                 break;
             case 3:
-                rdocument.write('Среда');
+                document.write('Среда');
                 break;
             case 4:
                 document.write('Четверг');
