JL-16 испрапвлена ошибка

--- a/JL-16.html
+++ b/JL-16.html
@@ -10,14 +10,13 @@
     //2
 
     function getStringWord(string) {
-        if (string.indexOf('hello') != -1) {
+        if (string.indexOf('hello') !== -1) {
             return true;
         }
         else {
             return false;
         }
     }
-
 
 
 </script>
