--- a/JL-20.html
+++ b/JL-20.html
@@ -1,10 +1,11 @@
 <script>
 
     function getHostAnonymous(param) {
-        return param();
+        return param;
     }
     let result = getHostAnonymous(function () {
         document.write('Hello');
     });
+    result();
 
 </script>
