JL-21 исправлены ошибки

--- a/JL-21.html
+++ b/JL-21.html
@@ -7,8 +7,8 @@
     }
 
     //2
-    function getHostRandomInteger() {
-        return 'Случайное число:' + getRandomInteger(1, 100);
+    function getHostRandomInteger(number) {
+        return 'Случайное число:' + number;
     }
 
 </script>
