--- a/JL-37.html
+++ b/JL-37.html
@@ -8,7 +8,13 @@
     //console.log(getRandomInteger(1, 100));
 
     //2
-    let number = [getRandomInteger(1, 100), getRandomInteger(1, 100), getRandomInteger(1, 100), getRandomInteger(1, 100), getRandomInteger(1, 100)];
+    let number = [
+        getRandomInteger(1, 100),
+        getRandomInteger(1, 100),
+        getRandomInteger(1, 100),
+        getRandomInteger(1, 100),
+        getRandomInteger(1, 100)
+    ];
     // console.log(number);
 
     //3
