--- a/JL-38.html
+++ b/JL-38.html
@@ -1,13 +1,12 @@
 <script>
 
     //1
-    function getAddsElements() {
-        colors = ['red', 'green'];
+    function getAddsElements(colors) {
         colors.push('blue', 'white');
         return colors;
     }
 
     //2
-    document.write(getAddsElements('red', 'green'));
+    document.write(getAddsElements(colors=['red', 'green']));
 
 </script>
