--- a/JL-38.html
+++ b/JL-38.html
@@ -7,6 +7,6 @@
     }
 
     //2
-    document.write(getAddsElements(colors=['red', 'green']));
+    document.write(getAddsElements(['red', 'green']));
 
 </script>
