--- a/JL-39.html
+++ b/JL-39.html
@@ -17,7 +17,7 @@
         colors.includes('green');
     }
 
-    if (colors.includes('green')) {
+    if (isHaveElement(colors)) {
         document.write('true');
     }
     else {
