JL-39 исправление ошибок

--- a/JL-39.html
+++ b/JL-39.html
@@ -14,7 +14,7 @@
 
     //3
     function isHaveElement(colors) {
-        colors.includes('green');
+       return colors.includes('green');
     }
 
     if (isHaveElement(colors)) {
