JL-46 исправлены ошибки

--- a/JL-46.html
+++ b/JL-46.html
@@ -3,10 +3,10 @@
     //1
     for (let i = 1; i <= 20; i++) {
         if (i < 8) {
-            document.write('Пропускаем' + '<br>')
+            document.write('Пропускаем <br>');
         }
         else {
-            document.write('Цифра:' + i + '<br>')
+            document.write('Цифра:' + i + '<br>');
         }
     }
     document.write('<br>');
@@ -14,10 +14,10 @@
     //2
     for (let i = 0; i <= 20; i++) {
         if (i < 8) {
-            document.write('Пропускаем' + '<br>')
+            document.write('Пропускаем <br>');
         }
         else {
-            document.write('Цифра:' + i + '<br>')
+            document.write('Цифра:' + i + '<br>');
         }
     }
 
