--- a/JL-49.html
+++ b/JL-49.html
@@ -1,8 +1,9 @@
 <script>
 
-    for (i = 0; i <= 10; i++) {
-        let a = 1 * i;
-        document.write(1 + '*' + i + '=' + a + '<br>')
+    for (i = 1; i < 10; i++) {
+        document.write('<br>');
+        for (j = 1; j < 10; j++)
+            document.write(i + "*" + j + '=' + (i * j) + '<br>');
     }
 
 </script>
