--- a/JL-49.html
+++ b/JL-49.html
@@ -1,9 +1,10 @@
 <script>
 
     for (i = 1; i < 10; i++) {
+        for (j = 1; j < 10; j++) {
+            document.write(i + '*' + j + '=' + (i * j) + '<br>');
+        }
         document.write('<br>');
-        for (j = 1; j < 10; j++)
-            document.write(i + "*" + j + '=' + (i * j) + '<br>');
     }
 
 </script>
