--- a/JL-50.html
+++ b/JL-50.html
@@ -15,7 +15,9 @@
     //3
     let a = 0;
     while (a < 7) {
-        if (a > 2) break;
+        if (a > 2) {
+            break;
+        }
         document.write(month[a] + ' ');
         a++;
     }
