JL-51 исправление ошибок

--- a/JL-51.html
+++ b/JL-51.html
@@ -1,7 +1,7 @@
 <script>
 
     //1
-    for (i = 0; i <= 10; i++) {
+    for (let i = 0; i <= 10; i++) {
         if (i == 5 || i == 8) {
             continue;
         }
@@ -11,9 +11,9 @@
     document.write('<br>');
 
     //2
-    let number = [2, 6, 8];
-    for (j = 0; j <= 10; j++) {
-        if (j == number[0] || j == number[1] || j == number[2]) {
+    let excludeNumbers = [2, 6, 8];
+    for (let j = 0; j <= 10; j++) {
+        if (excludeNumbers.indexOf(j) !== -1) {
             continue;
         }
         document.write(j);
