--- a/JL-52.html
+++ b/JL-52.html
@@ -2,12 +2,28 @@
 
     //1
     function getContainsNumber() {
-        for (let i = 0; i < 10; i++) {
+        for (let i = 0; i <= 10; i++) {
             if (i > 3 && i < 7) {
                 continue;
             }
             document.write(i);
         }
     }
+    getContainsNumber();
+
+    document.write('<br>');
+
+    //2
+    function getReturnsNumber() {
+        let number = '';
+        for (let i = 0; i <= 10; i++) {
+            if (i > 3 && i < 7) {
+                continue;
+            }
+            number = number + i;
+        }
+        return number;
+    }
+    document.write(getReturnsNumber());
 
 </script>
