--- a/JL-63.html
+++ b/JL-63.html
@@ -33,9 +33,8 @@
 
 <script>
     let tableEl = document.getElementById('table-id');
-    for( let i = 0; i < tableEl.rows.length; i++ )
-       {
-       document.write( tableEl.rows[i].cells[0].innerHTML+'<br>');
-       }
+    for (let i = 0; i < tableEl.rows.length; i++) {
+        document.write(tableEl.rows[i].cells[1].innerHTML + '<br>');
+    }
 
 </script>
