JL-64 исправлены ошибки

--- a/JL-64.html
+++ b/JL-64.html
@@ -3,10 +3,10 @@
 <script>
     let divElement = document.getElementById('div-id');
     divElement.onmouseover = function () {
-        console.log(innerHTML = 'навели на div');
+        console.log('навели на div');
     };
     divElement.onclick = function () {
-        console.log(innerHTML = 'кликнули на div');
+        console.log('кликнули на div');
     };
 
 </script>
