--- a/JL-72.html
+++ b/JL-72.html
@@ -6,19 +6,12 @@
     function getRandomInteger(min, max) {
         let rand = min - 0.5 + Math.random() * (max - min + 1);
         return Math.round(rand);
-    }
-
-
+    };
     setInterval(function () {
+        document.getElementById('div-1').style.display = 'block';
+        document.getElementById('div-2').style.display = 'block';
+        document.getElementById('div-3').style.display = 'block';
         document.getElementById('div-' + getRandomInteger(1, 3)).style.display = 'none';
     }, 3000);
-    setInterval(function () {
-        document.getElementById('div-' + getRandomInteger(1, 3)).style.display = 'block';
-    }, 3000);
-    setInterval(function () {
-        document.getElementById('div-' + getRandomInteger(1, 3)).style.display = 'block';
-    }, 3000);
-    
-    
 
 </script>
