--- a/JL-81.html
+++ b/JL-81.html
@@ -5,7 +5,8 @@
     }
     //console.log(daysInMonth(10,2020));
 
-    for (let i = 1; i <= daysInMonth(10, 2020); i++) {
+    let daysCount = daysInMonth(10, 2020);
+    for (let i = 1; i <= daysCount; i++) {
         if (i % 2 == 0) {
             document.getElementById('div').innerHTML += i + ' ';
         }
