--- a/JL-90.html
+++ b/JL-90.html
@@ -7,26 +7,23 @@
 
 <body>
     <div class="number">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><b>1</b></div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
     </div>
     <div class="result"></div>
 
     <script>
-        function getRandomInteger(min, max) {
-            let rand = min - 0.5 + Math.random() * (max - min + 1);
-            return Math.round(rand);
-        }
-
+        
         $(document).ready(function () {
-            //console.log($('.number div'));
+           
             let divs = $('.number div');
+           // console.log($('.number div'));
             $.each(divs, function (index, value) {
-                // console.log(value);
-                $('.result').append(getRandomInteger(1, 5) + ',');
+                //console.log(value);
+                $('.result').append( $(value).html() + ' ');
             });
         });
 
