--- a/JL-95.html
+++ b/JL-95.html
@@ -7,19 +7,20 @@
 
 <body>
     <button class="move">move</button><br><br>
-    <div id="div-1" style="border:1px solid red; width: 100px; height: 100px; position: absolute;"></div><br>
-    <div id="div-2" style="border:1px solid green; width: 100px; height: 100px;position: absolute;"></div>
+    <div id="div-1" style="border:1px solid red; width: 100px; height: 100px"></div><br>
+    <div id="div-2" style="border:1px solid green; width: 100px; height: 100px"></div>
     <script>
 
         $(document).ready(function () {
 
             $('.move').on('click', function () {
-
                 $('#div-1').animate({
-                    left: '300px'
-                });
-                $('#div-2').animate({
-                    left: '200px'
+                    marginLeft: '300px'
+                }, 'fast', function () {
+
+                    $('#div-2').animate({
+                        marginLeft: '200px'
+                    });
                 });
             });
         });
