JL-97 исправление ошибок

--- a/JL-97.html
+++ b/JL-97.html
@@ -20,7 +20,7 @@
                     console.log(random);
                     if (random == 1) {
                         $('#div').animate({
-                            top: '30px'
+                            top: '+30px'
                         });
                     }
                     if (random == 2) {
@@ -30,7 +30,7 @@
                     }
                     if (random == 3) {
                         $('#div').animate({
-                            left: '30px'
+                            left: '+30px'
                         });
                     }
                     if (random == 4) {
